[project]
name = "koi-net-ask-response-ranker-node"
version = "0.1.0"
description = "KOI-net response ranker node for ask subnet system"
authors = [
    {name = "Luke Miller", email = "luke@metagov.org"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "koi-net>=1.3.0b8",
    "slack-bolt",
]
