[project]
name = "koi-net-ask-response-ranker-node"
version = "0.1.0"
description = "Response ranker KOI-net node for ask network application."
authors = [
    {name = "Luke Miller", email = "luke@metagov.org"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "koi-net~=2.0",
    "rid-lib>=3.2.16",
    "slack-bolt",
]

[project.urls]
Homepage = "https://github.com/metagov/koi-net-ask-response-ranker-node"